--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,6 @@ Author: Your Name
 Maintainer: Your Name <your@email.com>
 Description: More about what it does (maybe more than one line)
 License: GPL (>= 2)
-Imports: Rcpp (>= 0.11.3), RcppArmadillo
-LinkingTo: Rcpp, RcppArmadillo
-Depends: RcppArmadillo
+Imports: Rcpp (>= 0.11.3), RcppArmadillo, rgl
+LinkingTo: Rcpp, RcppArmadillo, rgl
+Depends: Rcpp, RcppArmadillo, rgl
